[tool.poetry]
name = "evals-test"
version = "0.1.0"
description = "Learning how to run evals by going through readme in evals official repo"
authors = ["MiThCeKi <michaeltcking@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "^2.1.3"
openai = "^1.54.5"
dotenv = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
